--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div id="splash-screen">
         <div class="animate__animated animate__bounceInDown">
-            <img src="YOUR_LOGO_URL_HERE" alt="Alingo Logo" class="w-40 h-40 object-contain mb-4">
+            <img src="LOGO.JPG" alt="Alingo Logo" class="w-40 h-40 object-contain mb-4">
         </div>
         
         <h1 class="logo-text text-5xl text-blue-700 tracking-tighter animate__animated animate__fadeIn">
