--- a/public/index.html
+++ b/public/index.html
@@ -3,73 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alingo - Your Super App</title>
+    <title>Alingo - Super App</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         :root {
             --deep-blue: #003366;
             --fresh-green: #28a745;
         }
-        body { background: #f8fafc; margin: 0; font-family: 'Segoe UI', sans-serif; }
+        body { background-color: #f1f5f9; display: flex; flex-direction: column; align-items: center; justify-content: center; min-height: 100vh; margin: 0; font-family: sans-serif; }
 
-        /* Welcome Text */
-        .welcome-note { text-align: center; margin-top: 40px; margin-bottom: 20px; }
-        .welcome-note h1 { color: var(--deep-blue); font-weight: 900; font-size: 2rem; text-transform: uppercase; }
+        .welcome-text { text-align: center; margin-bottom: 2rem; }
+        .welcome-text h1 { color: var(--deep-blue); font-size: 1.875rem; font-weight: 900; text-transform: uppercase; }
 
-        /* Disk Container */
-        .disk-wrapper {
-            position: relative; width: 320px; height: 320px;
-            margin: 50px auto; display: flex; justify-content: center; align-items: center;
+        /* Disk Design */
+        .disk-wrapper { position: relative; width: 320px; height: 320px; display: flex; justify-content: center; align-items: center; }
+        .outer-disk { 
+            position: absolute; width: 100%; height: 100%; 
+            background: linear-gradient(135deg, var(--deep-blue), var(--fresh-green)); 
+            border-radius: 50%; border: 6px solid white; box-shadow: 0 10px 40px rgba(0, 51, 102, 0.4);
+        }
+        .inner-disk { 
+            position: absolute; width: 70%; height: 70%; background: white; 
+            border-radius: 50%; z-index: 5; display: flex; justify-content: center; align-items: center; 
+            box-shadow: inset 0 0 15px rgba(0,0,0,0.1); 
         }
 
-        /* Outer Disk - Theme Colors */
-        .outer-disk {
-            position: absolute; width: 100%; height: 100%;
-            background: linear-gradient(135deg, var(--deep-blue), var(--fresh-green));
-            border-radius: 50%; border: 8px solid white;
-            box-shadow: 0 15px 45px rgba(0, 51, 102, 0.3);
+        /* Interactive Buttons */
+        .node { 
+            position: absolute; width: 68px; height: 68px; background: white; 
+            border-radius: 50%; display: flex; flex-direction: column; 
+            justify-content: center; align-items: center; font-size: 11px; 
+            font-weight: bold; color: var(--deep-blue); box-shadow: 0 5px 15px rgba(0,0,0,0.2); 
+            z-index: 10; border: 2px solid #e2e8f0; cursor: pointer; transition: 0.3s;
         }
-
-        /* Inner Disk - 70% Scale */
-        .inner-disk {
-            position: absolute; width: 70%; height: 70%;
-            background: white; border-radius: 50%; z-index: 5;
-            display: flex; justify-content: center; align-items: center;
-            box-shadow: inset 0 0 15px rgba(0,0,0,0.1);
-        }
-
-        /* Service Buttons (Nodes) */
-        .node {
-            position: absolute; width: 68px; height: 68px; background: white;
-            border-radius: 50%; display: flex; flex-direction: column;
-            justify-content: center; align-items: center; font-size: 11px;
-            font-weight: bold; color: var(--deep-blue);
-            box-shadow: 0 8px 15px rgba(0,0,0,0.1); z-index: 10;
-            border: 2px solid #f1f5f9; cursor: pointer; transition: all 0.3s ease;
-        }
+        .node:hover { transform: scale(1.1); border-color: var(--fresh-green); }
         .node:active { transform: scale(0.9); }
-        .node span { font-size: 20px; margin-bottom: 2px; }
 
-        /* Perfect Circular Positions */
-        .n1 { top: -25px; left: 126px; }  /* Taxi */
-        .n2 { top: 55px; right: -25px; }  /* Food */
-        .n3 { bottom: 55px; right: -25px; } /* Grocery */
-        .n4 { bottom: -25px; left: 126px; } /* Tickets */
-        .n5 { bottom: 55px; left: -25px; }  /* Shop */
-        .n6 { top: 55px; left: -25px; }     /* Travel */
+        /* Positions */
+        .n1 { top: -25px; left: 126px; } .n2 { top: 55px; right: -25px; }
+        .n3 { bottom: 55px; right: -25px; } .n4 { bottom: -25px; left: 126px; }
+        .n5 { bottom: 55px; left: -25px; } .n6 { top: 55px; left: -25px; }
     </style>
 </head>
 <body>
 
-    <div class="welcome-note">
+    <div class="welcome-text">
         <h1>Welcome to Alingo</h1>
-        <p class="text-gray-500 font-medium">All In One Go Service</p>
+        <p class="text-gray-500 font-medium">Your All-In-One Partner</p>
     </div>
 
     <div class="disk-wrapper">
         <div class="outer-disk"></div>
         <div class="inner-disk">
-            <img src="/LOGO.JPG" class="w-3/4 object-contain" alt="Alingo Logo" onerror="this.src='https://via.placeholder.com/100?text=Alingo'">
+            <img src="/LOGO.JPG" class="w-3/4 object-contain" alt="Alingo" onerror="this.src='https://via.placeholder.com/100?text=Alingo'">
         </div>
         
         <div class="node n1" onclick="openService('Taxi')"><span>🚕</span>TAXI</div>
@@ -82,8 +68,11 @@
 
     <script>
         function openService(name) {
-            alert(name + " Service is being prepared for you!");
-            // یہاں آپ فائر بیس کا ڈیٹا بھی لوڈ کر سکتے ہیں
+            if (name === 'Taxi') {
+                window.location.href = '/taxi';
+            } else {
+                alert(name + " Service is coming soon on Alingo!");
+            }
         }
         console.log("Alingo App UI Restored & Active.");
     </script>
